# ral-engine

./: .gitmodules  CMakeLists.txt  README.md  build.py
app/src/: main.cpp
ral-core/: CMakeLists.txt  ral-core.h
ral-core/include/: ral-core.h
ral-core/src/init/: application.cpp  application.h  entry.h  macros.h
ral-core/src/sys/: applicationevent.h  event.h  eventqueue.cpp  eventqueue.h  keyevent.h  mouseevent.h  observer.h  windowevent.h
